<resources>
    <string name="content_description">content description</string>
    <string name="sdk_cancel">取消</string>
    <string name="sdk_confirm">确认</string>
    <string name="sdk_continue">下一步</string>
    <string name="sdk_default_title">UUPassport</string>
    <string name="sdk_login">登录</string>
    <string name="sdk_register">注册</string>
    <string name="sdk_verify_code_hint">填写验证码，点击可刷新</string>
    <string name="sdk_add_new_title">添加帐号</string>
    <string name="sdk_forget_pass_tip">找回密码？</string>
    <string name="sdk_password_show">显示</string>
    <string name="sdk_password_hide">隐藏</string>
    <string name="sdk_phone_hint">请输入手机号</string>
    <string name="sdk_fast_register">快速注册</string>
    <string name="sdk_username_register">用户名注册</string>
    <string name="sdk_phone_register">手机快速注册</string>
    <string name="sdk_register_agreement">用户协议</string>
    <string name="sdk_reg_code_hint">6-12位字母/数字/符号</string>
    <string name="sdk_input_oldcode_hint">请输入原密码</string>
    <string name="sdk_input_newcode_hint">请输入新密码</string>
    <string name="sdk_input_confirmcode_hint">请输入确认密码</string>
    <string name="sdk_agreement_tip">注册即表示同意</string>
    <string name="sdk_agreement">《用户服务协议》</string>
    <string name="sdk_agreement_title">用户服务协议</string>
    <string name="sdk_other_account">其他帐号登录：</string>
    <string name="sdk_alternative_text">或者</string>
    <string name="sdk_code_error_tip_null">！请输入密码</string>
    <string name="sdk_code_error_tip_fromat">！请正确输入密码</string>
    <string name="sdk_code_error_tip_lengthfromat">！密码长度不对</string>
    <string name="sdk_code_error_tip_iscodefromat">！密码要含有字母</string>
    <string name="sdk_code_error_tip_usernamefromat">！密码不能和用户名一致</string>
    <string name="sdk_code_error_tip_hasContinuousfromat">！密码不能连续相同6位</string>
    <string name="sdk_code_error_tip_isOrderfromat">！密码不能连续12345等</string>
    <string name="sdk_code_error_tip_notmatch">！请正确输入确认密码</string>
    <string name="sdk_phone_reg_hint">本手机号</string>
    <string name="sdk_btn_change">换一个</string>
    <string name="sdk_update_code">修改密码</string>
    <string name="sdk_switch_user">切换帐号</string>
    <string name="sdk_activity">活动</string>
    <string name="sdk_account">帐号</string>
    <string name="sdk_switch_user_bar">换帐号</string>
    <string name="sdk_user_center">个人中心</string>
    <string name="sdk_game">游戏</string>
    <string name="sdk_me">我</string>
    <string name="sdk_activity_off_line">活动尚未上线，敬请期待！</string>
    <string name="sdk_fragment_title">活动详情</string>
    <string name="sdk_gift_fragment_title">礼包详情</string>
    <string name="sdk_gift_fragment_manual">使用方法</string>
    <string name="sdk_gift_fragment_game_name">关联游戏:%s</string>
    <string name="sdk_gift_fragment_activity_time">活动时间:%s</string>
    <string name="sdk_gift_fragment_activity_time_ext">至</string>
    <string name="sdk_gift_dialog_title_sucess">领取成功！</string>
    <string name="sdk_gift_dialog_title_fail">领取失败！</string>
    <string name="sdk_gift_dialog_title_copy_sucess">复制成功！</string>
    <string name="sdk_gift_dialog_content_number">兑换码:%s</string>
    <string name="sdk_gift_dialog_content_second_time_sucess">您已经参加过本活动，您的礼包兑换码是:%s</string>
    <string name="sdk_gift_dialog_content_not_start">敬请期待！</string>
    <string name="sdk_gift_dialog_content_run_out">礼包被抢光了，下次早点来哦！</string>
    <string name="sdk_gift_dialog_content_download_use">请先下载安装好游戏后，再使用礼包！</string>
    <string name="sdk_gift_dialog_button_copy">复制兑换码</string>
    <string name="sdk_gift_dialog_button_go_to_game">进入游戏使用</string>
    <string name="sdk_gift_dialog_button_cancel">暂缓</string>
    <string name="sdk_gift_dialog_title_download_free">游戏免费下载</string>
    <string name="sdk_gift_dialog_button_download_free">免费下载</string>
    <string name="sdk_gift_dialog_button_download_later">稍后下载</string>
    <string name="sdk_input_password">请输入通行证密码</string>
    <string name="sdk_get_verify">再次发送验证码</string>
    <string name="sdk_input_verify">请输入验证码</string>
    <string name="loading_on_progress">正在载入&#8230;</string>
    <string name="share">分享</string>
    <string name="sdk_add_safety_tip">请输入您的UU通行证密码</string>
    <string name="toast_name_not_exist">没有此帐号，请检查</string>
    <string name="toast_invalid_pass">帐号或密码不对，请检查</string>
    <string name="toast_user_locked">帐号被锁定，请等待5分钟</string>
    <string name="toast_user_frozed">帐号被冻结，暂时不能操作</string>
    <string name="toast_invalid_token">账号token失效</string>
    <string name="toast_invalid_empty_amount">充值金额不能为空</string>
    <string name="toast_amount_is_zero">最少充值1元，请重新输入！</string>
    <string name="toast_no_question">密保问题未设置，请尝试其他方法</string>
    <string name="toast_no_bindphone">密保手机未设置，请尝试其他方法</string>
    <string name="toast_anser_wrong">密保问题回答错误</string>
    <string name="toast_pass_rule_wroing">密码为6&#8211;12位数字、字母或符号</string>
    <string name="toast_name_pass_equal">密码不能和帐号相同</string>
    <string name="toast_pass_continue_number">密码不能为连续数列</string>
    <string name="toast_verify_wrong">验证码不正确，请检查</string>
    <string name="toast_verify_sent_success">验证码已发送，请注意查收</string>
    <string name="toast_register_locked">帐号注册过快，请等待5分钟</string>
    <string name="toast_phone_existed">您的手机号码已经注册</string>
    <string name="toast_user_existed">您的账号已经注册</string>
    <string name="toast_old_pass_wrong">旧密码填写错误，请检查一下吧</string>
    <string name="toast_phone_format_wrong">请填写正确的手机号</string>
    <string name="bind_success_content">点击"确认"将回到帐号设置界面</string>
    <string name="toast_user_expired">用户已过期</string>
	<string name="toast_login_type_wrong">登录类型错误</string>
	<string name="toast_invalid_phonenumber">号码错误</string>
	<string name="toast_failed_questions">获取所有问题失败，请重试</string>
	<string name="toast_not_logined">用户未登录</string>
	<string name="toast_failed_send_verify">发送验证码失败，请重试</string>
	<string name="toast_failed_set_question">设置密保问题失败，请重试</string>
	<string name="toast_failed_update_code">更新密码失败，请重试</string>
	<string name="toast_failed_get_number">获取手机号码错误，请重试</string>
	<string name="toast_failed_invalid_image_verify_code">验证码错误</string>
	<string name="toast_error_null">请求发生错误，请重试</string>
	<string name="toast_error_system">服务器正在维护，请稍后再试</string>
	<string name="toast_error_cannot_sent_msm">您的手机暂时无法接收短信，请确认后再试</string>
	<string name="toast_io_error">您的网络状况异常，请检查网络！</string>
	<string name="no_networking_text">您的网络开小差了，请检查网络后刷新页面重试！</string>
	<string name="no_data_text">暂时没有相关数据！</string>
	<string name="click_to_refresh">点击刷新</string>
	<string name="sdk_network_error">您的网络开小差了，请检查网络后刷新页面重试</string>
    <string name="timeout_error">连接超时</string>
    <string name="server_error">服务器错误</string>
    <string name="parse_error">网络传输出错</string>
    <string name="toast_fail_get_username">获取用户名失败，请稍候重试</string>
    <string name="dlg_auto_login_tip">自动登录中&#8230;</string>
    <string name="sdk_add_new_account">添加帐号</string>
    <string name="sdk_change_code_success">修改密码成功</string>
    <string name="sdk_dlg_logout_title">退出应用</string>
    <string name="sdk_load_get_username">创建帐号</string>
    <string name="sdk_nav_logout">退出</string>
    <string name="sdk_set_phone_success">绑定手机成功</string>
    <string name="sdk_nick_null_error">昵称不能为空</string>
    <string name="sdk_nick_format_error">请输入正确的昵称</string>
    <string name="sdk_find_code_title">找回密码</string>
    <string name="sdk_passport_tip">帐号：</string>
    <string name="sdk_code_tip">密码：</string>
    <string name="sdk_user_name_input_hint">请输入帐号</string>
    <string name="sdk_phone_error_tip">！请正确输入手机号</string>
    <string name="sdk_answer_error_tip">！密保答案错误，请重新输入</string>
    <string name="sdk_username_null_tip">！请输入帐号</string>
    <string name="sdk_verfiy_error_tip">！请正确输入验证码</string>
    <string name="sdk_passport_error_tip">！请输入正确密码</string>
    <string name="sdk_user_not_exist_tip">！该帐号不存在，请重新输入</string>
    <string name="sdk_no_peer_certificate">客户端证书错误，请检查手机的时间设置是否正确！</string>
    <string name="sdk_answer_wrong_tip">输入错误已超三次，请联系客服。</string>
    <string name="sdk_user_name_or_phone_input_hint">请输入手机号或账号</string>
    <string name="sdk_input_password_hint">填写密码</string>
    <string name="sdk_commit">提交</string>
    <string name="sdk_get_reg_verify">获取验证码</string>
    <string name="sdk_delete_account_tip">确认删除帐号？</string>
    <string name="sdk_relogin_tip">密码错误，请重新登录</string>
    <string name="sdk_time_tip">%1$ds后再次发送验证码</string>
    <string name="sdk_switch_user_success">帐号切换成功</string>
    <string name="sdk_switch_user_tip">切换到新账号需要退出当前游戏，并重新进入后才能生效！</string>
    <string name="sdk_account_balance">小游余额：</string>
    <string name="sdk_account_balance_value">%1$s元</string>
    <string name="sdk_recharge_amount">充值金额：</string>
    <string name="sdk_recharge_default_amount">20</string>
    <string name="sdk_recharge_unit">元</string>
    <string name="sdk_recharge">充值</string>
    <string name="about_us">关于我们</string>
    <string name="balance">余额(元)</string>
    <string name="bonus">红包(元)</string>
    <string name="balance_value">%1$s</string>
    <string name="bonus_value">&#8230;</string>
    <string name="account_name">账户：%1$s</string>
   	<string name="money_management">资金管理</string>
   	<string name="order_detail">订单详情</string>
   	<string name="product_name">商品名称</string>
   	<string name="transaction_amount">交易金额</string>
   	<string name="create_time">创建时间</string>
   	<string name="transaction_status">交易状态</string>
   	<string name="order_id">订单号</string>
    <string name="sdk_game_title">精彩游戏推荐</string>
    <string name="sdk_game_null">哎呀没有游戏呢，客官请联系我们哦：\n1.客服电话：021–65879097\n2.QQ：2476509398</string>
   	<string name="sdk_game_add_task_failed">文件系统故障，请重启手机后重试！</string>
    <string name="sdk_user_info">账户资料</string>
    <string name="sdk_user_icon">头像</string>
    <string name="sdk_user_nick">昵称</string>
    <string name="sdk_user_phone">手机号</string>
    <string name="sdk_user_password">支付密码</string>
    <string name="sdk_input_nick_hint">请输入昵称</string>
    <string name="sdk_bind_phone">编辑手机号</string>
    <string name="sdk_bind_phone_input_hint">填写手机号</string>
    <string name="sdk_bind_code_input_hint">填写验证码</string>
    <string name="sdk_bind_time_tip">%1$ds后重发</string>
    <string name="sdk_pay_password">请输入支付密码！</string>
    <string name="sdk_pay_password_add">为了保证资金安全\n请设置6位支付密码！</string>
    <string name="sdk_pay_password_change">修改支付密码</string>
    <string name="sdk_pay_password_lable_old">原支付密码</string>
    <string name="sdk_pay_password_lable_new">新支付密码</string>
    <string name="sdk_pay_password_lable_new_again">确认支付密码</string>
    <string name="sdk_pay_password_forget">找回支付密码</string>
    <string name="two_passwords_do_not_match">两次密码不一致</string>
    <string name="password_error_please_retry">密码错误，请重新输入！</string>
    <string name="sdk_find_password_code">验证码</string>
    <string name="sdk_find_password_code_hint">输入手机接收到的验证码</string>
    <string name="sdk_find_password_pwd">新密码</string>
    <string name="sdk_find_password_pwd_again">确认密码</string>
    <string name="sdk_find_password_pwd_hint">输入你想设置的密码</string>
    <string name="sdk_find_password_pwd_again_hint">请再次输入密码</string>
    <string name="sdk_find_password_btn_commit">确定找回</string>
    <string name="sdk_pwd_forget">忘记密码?</string>
    <string name="sdk_pwd_human_find">人工找回</string>
    <string name="sdk_pwd_human_find_hint">如果您没有绑定手机号码，您还可以用以下方式联系客服：\n1.客服电话：021–65879097</string>
    <string name="sdk_pwd_human_find_hint_qq">2.QQ：2476509398</string>
    <string name="sdk_uassist_version">小游%1$s</string>
    <string name="sdk_privacy_declear">隐私保护声明</string>
    <string name="sdk_user_service_protocol">用户服务协议</string>
    <string name="sdk_contact_method">您还可以以下的方式直接联系客服：</string>
    <string name="sdk_customer_service_phone">1、客服电话：021&#8211;65879070</string>
    <string name="sdk_qq_group">2、QQ：2476509398</string>
</resources>