<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/game_grid_bg"
    android:minHeight="@dimen/sdk_alert_dialog_height" >
    <RelativeLayout 
        android:layout_width="300dp"
        android:layout_height="260dp">
    
        <TextView
            android:id="@+id/sdk_bind_tv_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_title"
            android:textSize="23sp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/sdk_bind_phone" />
        <EditText
            android:id="@+id/sdk_bind_et_phone"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_below="@id/sdk_bind_tv_title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_value"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:maxLength="11" 
            android:textColorHint="@color/user_dialog_input_hint"
            android:background="@drawable/sdk_dialog_input_bg"
            android:hint="@string/sdk_bind_phone_input_hint" 
            />
        <Button
            android:id="@+id/sdk_bind_btn_code"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_below="@id/sdk_bind_tv_title"
            android:layout_alignRight="@id/sdk_bind_et_phone"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/sdk_get_reg_verify"
            android:background="@drawable/sdk_btn_identy"
            />
        <EditText
            android:id="@+id/sdk_bind_et_code"
            android:layout_marginTop="20dp"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_below="@id/sdk_bind_et_phone"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_value"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:maxLength="4" 
            android:textColorHint="@color/user_dialog_input_hint"
            android:background="@drawable/sdk_dialog_input_bg"
            android:hint="@string/sdk_bind_code_input_hint" 
            />
        
        <Button
            android:id="@+id/sdk_bind_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="@dimen/sdk_button_height_m"
            android:layout_below="@id/sdk_bind_et_code"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:textColor="@drawable/blue"
            android:textSize="18sp"
            android:text="@string/sdk_cancel"
            android:background="@drawable/sdk_btn_set_pwd_selector"/>
        <Button
            android:id="@+id/sdk_bind_btn_ok"
            android:layout_width="120dp"
            android:layout_height="@dimen/sdk_button_height_m"
            android:layout_below="@id/sdk_bind_et_code"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:textColor="@drawable/gray"
            android:textSize="18sp"
            android:text="@string/sdk_confirm"
            android:background="@drawable/sdk_btn_set_pwd_selector"/>
    </RelativeLayout>
</RelativeLayout>