<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" 
    android:background="@color/white">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sdk_find_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_value"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="phone"
            android:paddingLeft="95dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/user_dialog_input_hint"
            android:background="@color/color_set_item_bg"/>
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@color/user_info_title"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:text="@string/sdk_user_phone"/>
        
        
        <Button
            android:id="@+id/sdk_find_code_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_below="@id/sdk_bind_tv_title"
            android:layout_alignRight="@id/sdk_find_phone"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:text="@string/sdk_get_reg_verify"
            android:background="@drawable/sdk_btn_identy"/>
        
        <EditText
            android:id="@+id/sdk_find_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/sdk_find_phone"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_value"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="number"
            android:paddingLeft="95dp"
            android:layout_marginTop="@dimen/sdk_fast_reg_margin_v_min_dimen"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/sdk_find_password_code_hint"
            android:textColorHint="@color/user_dialog_input_hint"
            android:background="@color/color_set_item_bg"/>
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/sdk_find_phone"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@color/user_info_title"
            android:textSize="19sp"
            android:layout_marginTop="@dimen/sdk_fast_reg_margin_v_min_dimen"
            android:text="@string/sdk_find_password_code"/>
        
       <EditText
            android:id="@+id/sdk_find_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/sdk_find_code"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_value"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingLeft="95dp"
            android:layout_marginTop="@dimen/sdk_fast_reg_margin_v_min_dimen"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/sdk_find_password_pwd_hint"
            android:textColorHint="@color/user_dialog_input_hint"
            android:background="@color/color_set_item_bg"/>
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/sdk_find_code"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@color/user_info_title"
            android:textSize="19sp"
            android:layout_marginTop="@dimen/sdk_fast_reg_margin_v_min_dimen"
            android:text="@string/sdk_find_password_pwd"/>
        
        <EditText
            android:id="@+id/sdk_find_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/sdk_find_pwd"
            android:layout_centerHorizontal="true"
            android:textColor="@color/user_info_value"
            android:textSize="18sp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:paddingLeft="95dp"
            android:layout_marginTop="@dimen/sdk_fast_reg_margin_v_min_dimen"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/sdk_find_password_pwd_again_hint"
            android:textColorHint="@color/user_dialog_input_hint"
            android:background="@color/color_set_item_bg"/>
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/sdk_find_pwd"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@color/user_info_title"
            android:textSize="19sp"
            android:layout_marginTop="@dimen/sdk_fast_reg_margin_v_min_dimen"
            android:text="@string/sdk_find_password_pwd_again"/>
        
        
        <Button
            android:id="@+id/sdk_bind_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/sdk_find_pwd_again"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/content_generic_xmedium_size"
            android:text="@string/sdk_find_password_btn_commit"
            android:background="@drawable/sdk_btn_blue_selector"/>
    </RelativeLayout>
</ScrollView>