<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_password_dialog_bg"
    android:minHeight="@dimen/sdk_alert_dialog_height"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sdk_gift_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="20dp"
        android:text="@string/sdk_gift_dialog_title_sucess"
        android:textColor="@color/color_dlg_title_text"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/sdk_gift_content"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdk_gift_title"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/sdk_pay_password_lable_old"
        android:textColor="@color/user_dialog_input_hint"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/sdk_gift_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/sdk_btn_confirm"
            android:layout_width="120dp"
            android:layout_height="@dimen/sdk_button_height_m"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sdk_btn_set_pwd_selector"
            android:text="@string/sdk_confirm"
            android:textColor="@drawable/blue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sdk_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="@dimen/sdk_button_height_m"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sdk_btn_set_pwd_selector"
            android:text="@string/sdk_cancel"
            android:textColor="@drawable/gray"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>